hphp/test/quick/hh_typehint1.php.expectf
HipHop Fatal error: Argument 1 passed to foo() must be of type ?Bar, Foo given in %s on line 10
